# SSLang

./: .gitignore  CMakeLists.txt  CMakePresets.json  Documentation.md  README.md  SSLang.sln  SSLang.vcxproj  SSLang.vcxproj.filters
genObjectFile/: op_practical  optimized_test  unop_practical  unop_test  unoptimized_test
include/ast/: ASTNodes.h
include/generateMachineCode/: genObjFile.h
include/lexer/: Lexer.h
include/llvmGen/: LLVMCodeGen.h  LLVMUtility.h
include/llvmOptimize/: LLVMOptimizer.h
include/parser/: Parser.h
include/semanticAnalyzer/: SemanticAnalyzer.h
include/symbolTable/: SymbolTable.h
include/visitor/: Visitor.h
llvmGenerated/: optimized_practical_program.ll  optimized_test_programs.ll  test_programs.ll  unoptimized_practical_program.ll  unoptimized_test_programs.ll
src/: main.cpp
src/ast/: AST.cpp
src/codegen/: CodeGenerator.cpp
src/generateMachineCode/: genObjFile.cpp
src/lexer/: Lexer.cpp
src/llvmGen/: LLVMCodeGen.cpp  LLVMUtility.cpp
src/llvmOptimize/: LLVMOptimizer.cpp
src/parser/: Parser.cpp
src/semanticAnalyzer/: SemanticAnalyzer.cpp
src/symbolTable/: SymbolTable.cpp
tests/: test_float_declarations.ssl  test_int_declaration_fail.ssl  test_runner.cpp  test_string_declarations.ssl
tests/declaration_testing/: declaration_test_runner.cpp  test_declarations.ssl  test_int_declarations.ssl
tests/expression_testing/: expression_test_runner.cpp  test_assignment_expression.ssl  test_expressions.ssl
tests/function_testing/: function_test_runner.cpp  test_functions.ssl
tests/program_testing/: practical_program.ssl  program_test_runner.cpp  test_programs.ssl
tests/statement_testing/: statement_test_runner.cpp  test_statements.ssl
